--- a/protocol_version_header.opam
+++ b/protocol_version_header.opam
@@ -4,7 +4,7 @@ authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/protocol_version_header"
 bug-reports: "https://github.com/janestreet/protocol_version_header/issues"
 dev-repo: "git+https://github.com/janestreet/protocol_version_header.git"
-license: "Apache-2.0"
+license: "MIT"
 build: [
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
