--- a/protocol_version_header.opam
+++ b/protocol_version_header.opam
@@ -1,24 +1,22 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/protocol_version_header"
 bug-reports: "https://github.com/janestreet/protocol_version_header/issues"
 dev-repo: "git+https://github.com/janestreet/protocol_version_header.git"
+doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/protocol_version_header/index.html"
 license: "MIT"
 build: [
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
+  "ocaml" {>= "4.07.0"}
   "core_kernel"
   "ppx_jane"
-  "jbuilder"                {build & >= "1.0+beta18.1"}
-  "ocaml-migrate-parsetree" {>= "1.0"}
-  "ppxlib"                  {>= "0.1.0"}
+  "dune"        {build & >= "1.5.1"}
 ]
-available: [ ocaml-version >= "4.04.2" ]
-descr: "
-Protocol versioning
-
+synopsis: "Protocol versioning"
+description: "
 This library offers a lightweight way for applications protocols to
 version themselves. The more protocols that add themselves to
 [Known_protocol], the nicer error messages we will get when connecting
