--- a/test/src/dune
+++ b/test/src/dune
@@ -1,3 +1,3 @@
 (library (name protocol_version_header_test)
- (libraries async core expect_test_helpers protocol_version_header)
+ (libraries core_kernel expect_test_helpers_kernel protocol_version_header)
  (preprocess (pps ppx_jane)))
