--- a/protocol_version_header.opam
+++ b/protocol_version_header.opam
@@ -15,6 +15,7 @@ depends: [
   "ppx_jane"
   "dune"     {>= "2.0.0"}
 ]
+available: arch != "arm32" & arch != "x86_32"
 synopsis: "Protocol versioning"
 description: "
 This library offers a lightweight way for applications protocols to
