--- a/test/src/dune
+++ b/test/src/dune
@@ -1,6 +1,6 @@
 (library
  (name protocol_version_header_test)
- (libraries core expect_test_helpers_core krb_authorization_method
-   protocol_version_header)
+ (libraries base_quickcheck core expect_test_helpers_core
+   krb_authorization_method protocol_version_header)
  (preprocess
   (pps ppx_jane)))
